--- a/about.css
+++ b/about.css
@@ -1,66 +1,92 @@
-#header {
-	margin-bottom: -40px;
-}
-
-#header img {
+.logo img{
 	opacity: 0.7;
 	margin-bottom: 50px;
-	height: 87px;
-}
-#header ul li a img {
-	height: 50px;
-	margin-right: 40px;
-	margin-bottom: 70px;
+	margin-top: 50px;
+	height: 100px;
 }
 
-/*header link*/
+/*header link (後來決定不用圖片了)*/
 
-#header a {
+/*
+.jumbotron a img {
+	height: 60px;
+	margin-bottom: 75px;
 	opacity: 0.5;
 }
-#header a:hover {
+.jumbotron a:hover > img {
 	opacity: 1;
 	transition: .5s;
 }
-#header a:active {
-	opacity: 0.5;
-}
-
-
-#photo img {
-	border: 4px solid #00A29A;
+*/
+.img-rounded {
+	border: 4px solid #004466;
 	border-radius: 100px;
 	height: 180px;
-	margin-top: -100px;
+	margin-top: -90px;
+}
+.socialbtn {
+	margin-bottom: 70px;
+	position: relative;
+}
+.socialbtn a {
+	margin: 0px 25px;
+	color: white;
+	opacity: 0.7;
+}
+.socialbtn a:hover {
+	color: #33cccc;
+	opacity: 1;
+	transition: .5s;
 }
 
-
-#content {
-	width: 60%;
-	margin-left:20%; 
-	border-bottom: 2px #00A29A solid;
+/*content*/
+.content {
+	width: 50%; 
+	margin-left: 25%;
+	padding-bottom: 25px;
 }
-
-ul, li {
-	display: inline;
-
-}
-
 h1 {
 	font-size: 45pt;
 	font-weight: lighter;
 }
-
 h4 {
 	font-family: "Avenir Next";
-	color: #5F1885;
+	color: #004466;
 	text-align: left;
 	position: relative;
+	font-weight: bold;
 }
-
 blockquote {
+	font-size: 12pt;
 	font-family: "Avenir Next";
 	color: black;
-	text-align: justify;
+	text-align: left;
 	position: relative;
+	border-left: 2px solid #33cccc;
+	padding-top: 1px;
+}
+blockquote p {
+	margin: 10px 0px 10px 0px; 
+}
+.footer {
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  /* Set the fixed height of the footer here */
+  height: 45px;
+  background-color: #33cccc;
+  opacity: 0.6;
+  padding-top: 10px;
+}
+.footer a {
+	color: #004466;
+	opacity: 1;
+}
+.footer a:hover {
+	color: white;
+	transition: .5s;
+	opacity: 1;
+}
+.backtotop {
+	text-align: right;
 }
