--- a/main.css
+++ b/main.css
@@ -1,6 +1,6 @@
 body {
 	text-align: center;
-	font-family: "Century Gothic";
+	font-family: "Century Gothic", Helvetica, serif;
 	margin: 0px;
 }
 
