--- a/about.css
+++ b/about.css
@@ -50,7 +50,7 @@ h1 {
 	font-weight: lighter;
 }
 h4 {
-	font-family: "Avenir Next";
+	font-family: "Avenir Next", Helvetica, serif;
 	color: #004466;
 	text-align: left;
 	position: relative;
@@ -58,7 +58,7 @@ h4 {
 }
 blockquote {
 	font-size: 12pt;
-	font-family: "Avenir Next";
+	font-family: "Avenir Next", Helvetica, serif;
 	color: black;
 	text-align: left;
 	position: relative;
