--- a/home.css
+++ b/home.css
@@ -33,6 +33,7 @@ body {
   font-weight: lighter;
   color: #33cccc;
 }
+/*
 .pagination li a{
   border: 0px;
   color: #004466;
@@ -83,9 +84,36 @@ body {
   margin-top: -20px;
   margin-bottom: 20px;
 }
+*/
+.col-xs-12, .col-sm-4, .col-md-2 {
+  margin-top: 2%;
+}
+.menu {
+  background-color: #33cccc;
+  border-radius: 10px;
+  padding: 20% 0% 10% 0%;
+}
+.menu img {
+  width: 50%;
+  margin-bottom: 10%;
+}
+.menu p {
+  font-size: 14pt; 
+}
+.row a > div{
+  color: white;
+}
+.row a:hover > div{
+  background-color: #99e6e6; 
+  color: #004466;
+  text-decoration: none;
+  transition: .5s;
+}
 .bottom {
   font-size: 8pt;
-  margin-top: -10px;
+  margin-top: 15px;
   font-weight: lighter;
+  clear: left;
 }
+
 
