--- a/home.css
+++ b/home.css
@@ -109,6 +109,16 @@ body {
   text-decoration: none;
   transition: .5s;
 }
+.row a:active > div{
+  background-color: #33cccc; 
+  color: #004466;
+  text-decoration: none;
+}
+.row a:visited > div{
+  background-color: #33cccc; 
+  color: white;
+  text-decoration: none;
+}
 .bottom {
   font-size: 8pt;
   margin-top: 15px;
