page graphic design added

--- a/main.css
+++ b/main.css
@@ -60,3 +60,27 @@ body {
 	opacity: 1;
 	transition: color.5s, opacity.5s;
 }
+
+/*footer*/
+.footer {
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  /* Set the fixed height of the footer here */
+  height: 45px;
+  background-color: #33cccc;
+  opacity: 0.6;
+  padding-top: 10px;
+}
+.footer a {
+	color: #004466;
+	opacity: 1;
+}
+.footer a:hover {
+	color: white;
+	transition: .5s;
+	opacity: 1;
+}
+.backtotop {
+	text-align: right;
+}
